--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,11 @@ block content
   #dashboard
     .dashboard-content
       if user
-        #profile
-          img(src='#{user._json.avatar_image.url}')
+        #write
+          form(method='post')
+            textarea(name='message', placeholder='Write your message')
+            input(type='hidden', name='_csrf', value='#{csrf}')
+            button(type='submit') Post
 
         section
           ol.tabs
