--- a/views/index.jade
+++ b/views/index.jade
@@ -12,8 +12,8 @@ block content
 
         section
           ol.tabs
-            li.my-posts.selected My Posts
-            li.my-feed My Feed
+            li.my-feed.selected My Feed
+            li.my-mentions Mentions
             li.global-feed Global Feed
 
           ol.messages
