--- a/views/index.jade
+++ b/views/index.jade
@@ -2,11 +2,13 @@ extend layout
 
 block content
   #dashboard
+    a(name='#top')
     .dashboard-content
       if session
-        #write
+        #write(name='#write')
           form(method='post')
             textarea(name='message', placeholder='Write your message')
+            input(type='hidden', name='reply_to', value='', id='reply_to')
             input(type='hidden', name='_csrf', value='#{csrf}')
             button(type='submit') Post
 
