--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,12 +5,15 @@ html
     meta(content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0', name='viewport')
     meta(content='yes', name='apple-mobile-web-app-capable')
     meta(content='chrome=1', http-equiv='X-UA-Compatible')
-    link(rel='shortcut icon', href='/images/favicon.png')
+    link(rel='shortcut icon', href='/favicon.png')
+    link(rel='apple-touch-icon', sizes='72x72', href='/images/logo-72.png')
+    link(rel='apple-touch-icon', sizes='114x114', href='/images/logo-114.png')
+    link(rel='apple-touch-icon', sizes='128x128', href='/images/logo-128.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
 
   body(data-url='#{url}')
     header
-      a.home(href='/') N
+      a.home(href='/') NoodleApp
 
       if session
         a(href='/logout', id='logout') Log out
