--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -380,11 +380,11 @@ time {
     color: #fff;
     float: right;
     font-size: 11px;
-    padding: 3px 5px;
+    padding: 1px 5px;
     position: absolute;
     right: 0;
     text-align: center;
-    top: -5px;
+    top: 0;
     width: 30px;
 }
 
